--- a/APIRealtorBuddyCore/templates/email_template.html
+++ b/APIRealtorBuddyCore/templates/email_template.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
+
 <body>
     {% for line in body %}
-    <p>{{ line }}</p>
+    <p>{{ line|safe }}</p>
     {% endfor %}
 
     <!-- Footer -->
-    <div style="margin-top: 20px; padding-top: 10px; border-top: 1px solid #ccc;">
-        <img src="logo.txt" alt="Realtor Buddy Logo" style="width: 100px; height: 100px;">
-        <p>Ali Hamza<br>Cofounder<br>
-            <a href="mailto:ali@realtor-buddy.com">ali@realtor-buddy.com</a><br>
-            Check us out at: <a href="https://realtor-buddy.com">realtor-buddy.com</a>
-        </p>
-    </div>
+
+    <table cellpadding="0" cellspacing="0" style="margin-top: 20px;">
+        <tr>
+            <td>
+                <img src="https://i.ibb.co/nz7BmRs/logo-1.png" alt="logo-1"
+                    style="width: auto; height: 100px; display: block;">
+            </td>
+            <td style="vertical-align: top; padding-left: 10px;">
+                <p style="margin: 0; font-family: Arial, sans-serif; font-size: 16px; color: #333;">
+                    <strong>{{ from_name }}</strong><br>
+                    Cofounder<br>
+                    <a href="mailto:{{from_email}}"
+                        style="text-decoration: none; color: #0652DD;">{{from_email}}</a><br>
+                    Check us out at: <a href="https://realtor-buddy.com"
+                        style="text-decoration: none; color: #0652DD;">realtor-buddy.com</a>
+                </p>
+                <div style="font-size: 12px; color: grey;">
+                    If you'd like me to stop sending you emails, please reply to this email
+                </div>
+            </td>
+        </tr>
+    </table>
+
+
 </body>
 
 </html>
