--- a/APIRealtorBuddyCore/templates/email_template.html
+++ b/APIRealtorBuddyCore/templates/email_template.html
@@ -12,15 +12,16 @@
     {% endfor %}
 
     <!-- Footer -->
-
+    <br><br>
     <table cellpadding="0" cellspacing="0" style="margin-top: 20px;">
         <tr>
             <td>
-                <img src="https://i.ibb.co/nz7BmRs/logo-1.png" alt="logo-1"
-                    style="width: auto; height: 100px; display: block;">
+                <a href="https://realtor-buddy.com" style="text-decoration: none; color: #0652DD;">
+                    <img src="https://i.ibb.co/nz7BmRs/logo-1.png" alt="logo-1"
+                        style="width: auto; height: 70px; display: block;">
             </td>
             <td style="vertical-align: top; padding-left: 10px;">
-                <p style="margin: 0; font-family: Arial, sans-serif; font-size: 16px; color: #333;">
+                <p style="margin: 0; font-family: Arial, sans-serif; font-size: 12px; color: #333;">
                     <strong>{{ from_name }}</strong><br>
                     Cofounder<br>
                     <a href="mailto:{{from_email}}"
@@ -28,12 +29,13 @@
                     Check us out at: <a href="https://realtor-buddy.com"
                         style="text-decoration: none; color: #0652DD;">realtor-buddy.com</a>
                 </p>
-                <div style="font-size: 12px; color: grey;">
-                    If you'd like me to stop sending you emails, please reply to this email
-                </div>
+                
             </td>
         </tr>
     </table>
+    <div style="font-size: 10px; color: grey;">
+        If you'd like me to stop sending you emails, please reply to this email
+    </div>
 
 
 </body>
